# search-query

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  database.cast  field.cast  paper.bib  paper.jats  paper.md  parse.cast  pyproject.toml  quality.cast  release-checklist.md  search-query  struct.cast  term.cast
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: dist_smoke_test.yml  documentation.yml  tests.yml  update_docs.yml
data/crossref/: query_1.json  query_2.json  query_3.json
data/wos/: 10.1079_SEARCHRXIV.2022.00066.json
data_erroneous/wos/: 10.1079_SEARCHRXIV.2024.00477.json
docs/: Makefile  ais.md  dev_linter.md  dev_parser.md  documentation.pptx  ebsco.md  generate_errors_index.py  generate_field_map.py  generate_indices.py  make.bat  parser_skeleton.py  pubmed.md  readme.md
docs/source/: automate.rst  cli.rst  conf.py  demo.ipynb  improve.rst  index.rst  load.rst  modules.rst  pre_commit.rst  save.rst  search_query.ebsco.rst  search_query.generic.rst  search_query.pubmed.rst  search_query.rst  search_query.wos.rst  translate.rst
docs/source/api_search/: api_search.rst
docs/source/dev_docs/: api.rst  documentation.pptx  linter.rst  linter_development.rst  linter_skeleton.py  overview.rst  parser.rst  parser_development.rst  parser_skeleton.py  parser_skeleton_tests.py  search_query.cli.rst  search_query.database.rst  search_query.query.rst  serializer_development.rst  serializer_skeleton.py  tests.rst  translator_development.rst  translator_skeleton.py
docs/source/lint/: E.rst  E0001.rst  E0002.rst  E0004.rst  E0005.rst  E0006.rst  E0007.rst  E0008.rst  EBSCO_0001.rst  EBSCO_0002.rst  EBSCO_0011.rst  F0001.rst  F1001.rst  F1002.rst  F1004.rst  F1008.rst  F1009.rst  F1010.rst  F1011.rst  F1012.rst  F2001.rst  F2002.rst  F2003.rst  F2004.rst  F2005.rst  F2006.rst  F2007.rst  F2008.rst  F2009.rst  F2010.rst  F2011.rst  F2012.rst  F2013.rst  F2014.rst  F3001.rst  F3002.rst  F3003.rst  FIELD_0001.rst  FIELD_0002.rst  FIELD_0003.rst  (+63 more)
docs/source/messages/: E0001.rst  E0002.rst  E0003.rst  E0004.rst  E0005.rst  E0006.rst  E0007.rst  E0008.rst  F0001.rst  F0002.rst  F0003.rst  F0004.rst  F0005.rst  F0006.rst  F0007.rst  F1001.rst  F1002.rst  F1003.rst  F1004.rst  F1005.rst  F1006.rst  F1007.rst  F1008.rst  F1009.rst  F1010.rst  F1011.rst  F1012.rst  F1012s.rst  F2001.rst  F2002.rst  F2003.rst  F2004.rst  F2005.rst  F2006.rst  F2007.rst  F2008.rst  F2009.rst  F2010.rst  F2011.rst  F2012.rst  (+18 more)
docs/source/parser/: parser_index.rst
docs/source/query_database/: index.rst  query_overview.json  submit.rst
jats/: paper.jats
search_query/: WOSParser.py  WOSParser_Test.py  __init__.py  __version__.py  and_query.py  cli.py  cli_enter_query.py  compat.py  constants.py  constants_ebsco.py  constants_pubmed.py  constants_wos.py  database.py  database_queries.py  exception.py  linter.py  linter_base.py  linter_ebsco.py  linter_pubmed.py  linter_wos.py  near_query.py  node.py  not_query.py  or_query.py  parser.py  parser_ais.py  parser_base.py  parser_cinahl.py  parser_crossref.py  parser_ebsco.py  parser_pubmed.py  parser_validation.py  parser_wos.py  parser_wos_constants.py  proximity_query_ebsco.py  query.py  query_and.py  query_near.py  query_not.py  query_or.py  (+30 more)
search_query/database/: ais_senior_scholars_list_of_premier_journals.json  blocks_bmi_343.json
search_query/ebsco/: constants.py  linter.py  parser.py  query.py  serializer.py  translator.py
search_query/ebsco/v1_0_0/: __init__.py  capabilities.py  parser.py  serializer.py  translator.py
search_query/ebscohost/: __init__.py  constants.py  linter.py  parser.py  serializer.py  translator.py
search_query/ebscohost/v1_0_0/: serializer.py  translator.py
search_query/ebscohost/v_1/: __init__.py  parser.py  serializer.py  translator.py
search_query/ebscohost/v_1_0_0/: __init__.py  parser.py  serializer.py  translator.py
search_query/generic/: __init__.py  linter.py  serializer.py
search_query/generic/v_1/: serializer.py
search_query/generic/v_1_0_0/: serializer.py
search_query/json_db/: ais_senior_scholars_basket.json  ais_senior_scholars_list_of_premier_journals.json  blocks_bmi_343.json  journals_FT50.json
search_query/pubmed/: __init__.py  constants.py  linter.py  parser.py  query.py  serializer.py  translator.py
search_query/pubmed/v1_0_0/: __init__.py  capabilities.py  parser.py  serializer.py  translator.py
search_query/pubmed/v_1/: __init__.py  parser.py  serializer.py  translator.py
search_query/wos/: __init__.py  constants.py  linter.py  parser.py  query.py  serializer.py  translator.py
test/: conftest.py  ebsco_example.py  ebsco_query1.json  ebsco_query2.json  output.json  readme.md  search_history_file_1.json  search_history_file_2.json  search_history_file_2_linter.json  test_cli.py  test_constants.py  test_database.py  test_ebsco.py  test_linter.py  test_linter_wos.py  test_paper.py  test_parser.py  test_parser_ais.py  test_parser_cinahl.py  test_parser_crossref.py  test_parser_ebsco.py  test_parser_pubmed.py  test_parser_wos.py  test_parser_wos_internals.py  test_pre_commit_hooks.py  test_pubmed.py  test_query.py  test_query_evaluate.py  test_query_translation.py  test_search_file.py  test_wos.py  test_wos_linter.py  test_wos_parser.py  test_wos_parser_internals.py
test/ebscohost/: test_ebscohost_parser_v_1.py  test_ebscohost_parser_v_1_0_0.py
test/pubmed/: test_pubmed_parser_v_1.py  test_pubmed_parser_v_1_0_0.py  test_pubmed_translator_v_1.py  test_pubmed_translator_v_1_0_0.py
test/wos/: test_wos_parser_internals.py  test_wos_parser_v_0.py  test_wos_parser_v_0_0_0.py  test_wos_parser_v_1.py  test_wos_parser_v_1_0_0.py  test_wos_upgrade.py
translations/IEEE/: ieeeTest.json
translations/PubMed/: pubmedTest.json
translations/WoS/: wosTest.json
(+134 files in other folders)
