[tool.poetry]
name = "search-query"
version = "0.11.0"
description = "Package for managing literature search queries."
authors = ["Katharina Ernst <katharina-maria.ernst@stud.uni-bamberg.de>", "Gerit Wagner <gerit.wagner@uni-bamberg.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_query"}]
keywords = ["search query", "literature search", "query translation", "research", "reproducible research", "open science", "literature", "literature review", "systematic review", "systematic literature review"]
classifiers = [
   "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
include = ["LICENSE", "README.md"]

[tool.poetry.scripts]
search-file-lint = "search_query.linter:main"

[tool.poetry.dependencies]
python = "^3.8"
pylint = { version = "3.0.1", optional = true }
pytest = { version = "^7.4.2", optional = true }
Sphinx = {version = "^5.2.3", optional = true }

[tool.poetry.extras]
dev = ["pylint", "pytest"]
docs = ["Sphinx"]

[tool.pylint.MAIN]
extension-pkg-whitelist = "lxml.etree"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "yaml.*",
    "pkg_resources.*",
    "tabulate.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
